# Boost-Cpp-Plugin-System

./: CMakeLists.txt  HelloPlugin.cpp  IPlugin.h  Plugin.h  PluginLoader.cpp  PluginLoader.h  SecondPlugin.cpp  StringFace.h  main.cpp
tests/: BenchmarkRun.cpp  BenchmarkRun.h  TestCase.h
tests/benchmarks/: ContextSwitchBenchmark.h  ContextSwitchReturnTypeBenchmark.h  EnableAndDisableBenchmark.h  LoadAndUnloadBenchmark.h
